# MAI-practice-2024

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml
app/: __init__.py  forms.py  routes.py
app/data/: outcomes.json  questions.json
app/static/: style.css
app/static/css/: style.css
app/templates/: index.html  questions.html  results.html
app/utils/: __init__.py  decision_engine.py
data/: outcomes.json  questions.json
